<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".95"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcomeTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcomeBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.75"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/splashTextTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.75"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/splashTextBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.85"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.88"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.97"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.43"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/progressRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".57"
        android:orientation="vertical"/>
    
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/splash"
        app:layout_constraintBottom_toBottomOf="@+id/imageBottom"
        app:layout_constraintStart_toStartOf="@+id/leftLine"
        app:layout_constraintEnd_toEndOf="@+id/rightLine"
        app:layout_constraintTop_toTopOf="@+id/imageTop"
        android:contentDescription="@string/splash_image" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/welcomeBottom"
        app:layout_constraintStart_toStartOf="@+id/leftLine"
        app:layout_constraintEnd_toEndOf="@+id/rightLine"
        app:layout_constraintTop_toTopOf="@+id/welcomeTop"
        android:text="@string/welcome"
        android:gravity="center"
        android:textColor="@color/main_blue"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/splashTextBottom"
        app:layout_constraintStart_toStartOf="@+id/leftLine"
        app:layout_constraintEnd_toEndOf="@+id/rightLine"
        app:layout_constraintTop_toTopOf="@+id/splashTextTop"
        android:text="@string/splash_text"
        android:gravity="center"
        android:textColor="@color/main_blue"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <ProgressBar
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBottom"
        app:layout_constraintStart_toStartOf="@+id/progressLeft"
        app:layout_constraintEnd_toEndOf="@+id/progressRight"
        app:layout_constraintTop_toTopOf="@id/progressTop"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/main_blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>