<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.50"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottonOneTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.55"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottonOneBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottonTwoTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.70"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottonTwoBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.80"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottonThreeTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.85"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottonThreeBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="horizontal"/>
    <ImageView
        android:layout_width="317dp"
        android:layout_height="274dp"
        android:src="@drawable/qr_code"
        app:layout_constraintBottom_toBottomOf="@+id/imageBottom"
        app:layout_constraintEnd_toEndOf="@+id/verticalRight"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/verticalLeft"
        app:layout_constraintTop_toTopOf="@+id/imageTop"
        app:layout_constraintVertical_bias="0.0"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scanBtn" android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custumbotton"
        android:text="@string/scan" android:textAllCaps="false"
        android:textColor="@color/white" android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottonOneBottom"
        app:layout_constraintEnd_toEndOf="@+id/verticalRight"
        app:layout_constraintStart_toStartOf="@+id/verticalLeft"
        app:layout_constraintTop_toTopOf="@+id/bottonOneTop"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custumbotton"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottonTwoBottom"
        app:layout_constraintEnd_toEndOf="@+id/verticalRight"
        app:layout_constraintStart_toStartOf="@+id/verticalLeft"
        app:layout_constraintTop_toTopOf="@+id/bottonTwoTop"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recordedBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custumbotton"
        android:text="@string/recorded"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottonThreeBottom"
        app:layout_constraintEnd_toEndOf="@+id/verticalRight"
        app:layout_constraintStart_toStartOf="@+id/verticalLeft"
        app:layout_constraintTop_toTopOf="@+id/bottonThreeTop"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="431dp"
        android:layout_height="83dp"
        android:background="@color/teal_700"
        android:text="Nhập mã thủ công"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageBottom"
        app:layout_constraintEnd_toStartOf="@+id/verticalRight"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/verticalLeft"/>
</androidx.constraintlayout.widget.ConstraintLayout>